<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.android.rexben.rexquiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/que"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_the_boxes_that_have_the_names_of_android_versions"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/que"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/kitkat"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/gingerbread"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox2"
            android:layout_marginLeft="10dp"
            android:text="@string/cupcake"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox3"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/vanilla"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox1"
            android:layout_marginTop="30dp"
            android:text="@string/_2_what_is_kotlin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginLeft="10dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/a_programming_language"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/headquaters_of_udacity"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/a_smartphone"
                android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginTop="30dp"
            android:text="@string/_3_alphabet_is_the_name_of_google_parent_company_n_true_or_false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_marginTop="30dp"
            android:text="@string/_4_what_is_the_first_smart_phone_to_work_on_android_platform"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textView3"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/nexus"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/samsung"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/htc_dream"
                android:textSize="15sp" />

        </RadioGroup>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGrp"
            android:layout_marginTop="51dp"
            android:text="@string/_5_who_designed_android_s_logo_enter_the_full_name_below"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/e_g_larry_page"
            android:inputType="textPersonName"
            android:text="" />


        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText2"
            android:layout_centerHorizontal="true"
            android:onClick="Submit"
            android:layout_marginTop="20dp"
            android:text="@string/submit" />
    </RelativeLayout>

</ScrollView>
